--- a/Lesson06-Visualizer-Preferences/T06.09-Exercise-EditTextPreference/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.09-Exercise-EditTextPreference/app/src/main/res/values/strings.xml
@@ -48,4 +48,7 @@
 
     <!-- Value in SharedPreferences for green color option -->
     <string name="pref_color_green_value" translatable="false">green</string>
+    <string name="pref_edit_text_key" translatable="false">size</string>
+    <string name="pref_edit_text_value" translatable="false">1</string>
+    <string name="pref_edit_text_label">Size Multiplier</string>
 </resources>
